tests/NormalTests/paczka1/fuzzy1/70141277.err
Error in line 5: 3N9tvK58gA S805 4,23
Error in line 4: 3N9tvK58gA S805 28,5
Error in line 6: S805 S510 217,1
Error in line 19: 3N9tvK58gA S710 38,6
Error in line 34: 3N9tvK58gA S510 37,5
